--- a/VRChat/27/1258727.html
+++ b/VRChat/27/1258727.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RPwEr2svLsJeQke1SOtbX8rdxqliktzGgWQlhFDoDAI="></script>
+    "GPR6xV2BU7npw+sfqrI8yMDxRacAbo3f5zeJ5M93AeI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】蒼炎ノ薙杖【変形武器】","description":"※このモデルは「赤間リユ」に含まれている武器モデルと同じものです。\n\nVCI、FBX、Unityパッケージを同梱しています。\nVRChat、Virtualcastでの使用を想定しています。\n\n\n■内容物\n●tue\n・akama_tue.fbx\n   tue_tex.png\n   uv_crystal.png\n   uv_tue_blade.png\n   uv_tue_blade.tga\n　杖のFBXデータ及び、テクスチャです。ポリゴン数1180\n\n・akama_tue.vci\n　杖のVCIデータです。\n---------------------\n・akama_tue.unitypackage\n　VCI用のUnityパッケージです(Unity 2018.3.5)\n--------------------\n・readme.txt\n　利用規約等について書かれたテキスト\n\n\n■商用利用について\n・この3Dモデルは商用、非商用に関わらず使用することができます。（R-18・R-18G制限なし）\nゲーム制作、動画配信、アニメーション制作等の利用が可能です。\nただし、3Dデータを含む形でのデータを販売することは禁じます。\n\n\n■モデル改変について\n・モデルの改変、テクスチャ等の改変は自由に行うことができます。\n\n\n\n■著作権\n・データの改造は個人利用の範囲での流用は可能です。\n・当配布3Dデータ及び改変データの著作権は製作者であるらいこうに帰属するものとします。\n\n\n\n■禁止事項\n・モデルデータ、テクスチャデータの再配布、販売を禁止します。\n\n・改変モデルに関しても同様に再配布、販売を禁止します。\nただし、第三者がモデルデータを流用できない形でデータを含む場合は使用可能です。\n（制作したゲーム中に改変をしたモデルを使用する等）\nこの場合、配布する際に当モデルを使用している旨を記載してください。\n\n・公序良俗に反する行為、他社に対する誹謗中傷目的での使用を禁止します。\n\n\n■トラブル等について\n・本モデルを使用したことによって生じたいかなる不利益に対して、製作者らいこうは一切の責任を負わないものとします。\n\n\n\n--------------------------------------\nこの利用規約は予告なく変更、改定されることがあります。\n\n\n\n製作者：　　らいこう/raikohGT\nサークル：　歯車平原\nサイトURL:　http://hagurumaheigen.blog.fc2.com/\nTwitter:    @kurohune\nPixiv:      https://www.pixiv.net/member.php?id=556116\n\n","url":"https://booth.pm/ja/items/1258727","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/0def6edc-839b-4238-ac6f-f10503707425/i/1258727/a23281bb-25ab-401d-b431-9eb7f26f58b6_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RPwEr2svLsJeQke1SOtbX8rdxqliktzGgWQlhFDoDAI="></script>
+    nonce="GPR6xV2BU7npw+sfqrI8yMDxRacAbo3f5zeJ5M93AeI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1258727/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1258727/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               29
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
