--- a/VRChat/67/1258667.html
+++ b/VRChat/67/1258667.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xcAOTXAlADFlRxrn30zevR+KFIMO4Ubx9CbMexhRI0Y="></script>
+    "wKldgZcLR0tDXMfdzxIY2XehX90JRHh5+aRivvMnD0U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ワールド設置推奨ボクセル１「枝垂桜」","description":"※ボクセルです。\nボクセルの枝垂桜です。お好きにお使いください。\nポリゴン数：104982△\n\n[利用規約]\nお好きにどうぞ。あるとすれば再配布は禁止いたします。\nあとは自由です。\n\n制作：桜の箱庭（カイム）","url":"https://booth.pm/ja/items/1258667","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ef2009a1-23cb-48b4-a676-c380a8e1368a/i/1258667/c14affb6-7cb8-4435-938f-346f2dad3ddb_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xcAOTXAlADFlRxrn30zevR+KFIMO4Ubx9CbMexhRI0Y="></script>
+    nonce="wKldgZcLR0tDXMfdzxIY2XehX90JRHh5+aRivvMnD0U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1258667/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1258667/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               19
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
