--- a/VRChat/93/1257693.html
+++ b/VRChat/93/1257693.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/P2FhZo3JVX5WdZlA9kkinXlEiXpeyPWv8E9tfPUQvQ="></script>
+    "Now8fzVuFvoBsIpAQo1E2Pa6OWd/zLc/+X+7P9xgrWA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Virtual Collection stage1 Soundtracks","description":"2019/03/02にてVRChat上にて開催されたイベント「Vitual Collection stage:1」にて使用したBGM集です。\n\n営利・非営利問わず使用可能です。 \n可能な限りの制作者名の表記をお願いします。","url":"https://booth.pm/ja/items/1257693","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/29015732-d2d0-4537-9aa5-cb60c6ffe325/i/1257693/059208d0-1f5f-4f89-931c-0334cc392bea_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/P2FhZo3JVX5WdZlA9kkinXlEiXpeyPWv8E9tfPUQvQ="></script>
+    nonce="Now8fzVuFvoBsIpAQo1E2Pa6OWd/zLc/+X+7P9xgrWA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -181,7 +183,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1257693/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
@@ -196,14 +198,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1257693/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
